# med-lm-train

./: pyproject.toml
environments/head_qa/: README.md  head_qa.py  pyproject.toml
environments/med_mcqa/: README.md  med_mcqa.py  pyproject.toml
environments/medconceptsqa/: README.md  medconceptsqa.py  pyproject.toml
environments/medqa/: README.md  medqa.py  pyproject.toml
environments/pubmedqa/: pubmedqa.py  pyproject.toml  readme.md
environments/supergpqa_stem/: pyproject.toml  supergpqa_stem.py
examples/supergpqa_stem/: rl.toml
medarc_rl/: utils.py
medarc_rl/launchers/: rl_local.py
medarc_rl/verifiers/: __init__.py  environment.py  formats.py  parsers.py  presentation.py  prompts.py  rewards.py  think.py
tests/: test_head_qa_training_env.py  test_med_mcqa_training_env.py  test_medarc_slurm.py  test_medconceptsqa_training_env.py  test_medqa_training_env.py  test_pubmedqa_training_env.py  test_rl_local.py  test_training_env_verifiers.py  training_env_test_utils.py
