[project]
name = "pubmedqa"
description = "Single-turn medical MCQ"
tags = ["medical", "clinical", "single-turn", "multiple-choice", "evaluation"]
version = "0.1.1"
requires-python = ">=3.11"
authors = [
    { name = "Robert Scholz", email = "robert.scholz@maxplanckschools.de" },
]
dependencies = [
    "verifiers>=0.1.3.post0",
    "datasets>= 4.0.0",
    "medarc-rl>=0.1.0",
    "medarc-verifiers>=0.1.0",
]

[project.optional-dependencies]
test = [
    "openai>=1.104.2",
    "prime",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pubmedqa.py", "data/"]
